add some css files.

--- a/stores/templates/stores/cart_shop.html
+++ b/stores/templates/stores/cart_shop.html
@@ -1,21 +1,23 @@
 {% extends 'basic.html' %}
+{% load static %}
 
 {% block content %}
     <head>
         <script src="https://kit.fontawesome.com/9417a4ac8c.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="{% static 'css/cart-shop-style.css' %}">
     </head>
 
     <body>
-        <div class="cart" style="background-color: rgba(14, 12, 12, 0.959); margin-top: -40px; margin-bottom: -20px;">
+        <div class="cart">
             <div class="container">
-                <div class="card-title" style="width: 1150px; height: 90px; margin-top: 40px; background-color: white; margin-bottom: -25px;">
-                    <div class="cart-details-product" style="margin-left: 20px; margin-bottom: 20px;">
+                <div class="card-title">
+                    <div class="cart-title-product">
                         {% if owner %}
                             {% for data in owner %}
                                 {% if forloop.first %}
-                                    <div class="instruction" style="display: flex; margin-top: 10px;">
-                                        <p style="font-weight: 500; margin-right: 4px;">{{ data.user }},</p>
-                                        <p>Checkout list produk yang akan kamu beli sekarang juga!</p><br>
+                                    <div class="instruction">
+                                        <p class="user">{{ data.user }},</p>
+                                        <p>Checkout list produk yang akan kamu beli sekarang juga!</p>
                                     </div>
                                 {% endif %}
                             {% empty %}
@@ -23,51 +25,51 @@
                             {% endfor %}
                         {% endif %}
 
-                        <div class="cart-subtitle" style="display: flex; font-weight: bold; margin-bottom: -20px;">
-                            <p style="margin-left: 120px; margin-right: 210px;">Product</p>
-                            <p style="margin-right: 85px;">Unit Price</p>
-                            <p style="margin-right: 100px;">Quantity</p>
-                            <p style="margin-right: 130px;">Total Price</p>
+                        <div class="cart-subtitle">
+                            <p class="product">Product</p>
+                            <p class="units">Unit Price</p>
+                            <p class="numbers">Quantity</p>
+                            <p class="total-all">Total Price</p>
                             <p>Action</p>
                         </div><hr>
                     </div>
                 </div>
-                <div class="card-product" style="width: 1150px; height: 950px; margin-top: 40px; background-color: white;">
-                    <div class="cart-details-product" style="margin-left: 0px; margin-bottom: 20px;">
+                <div class="card-product">
+                    <div class="cart-details-product">
                         {% for data in owner %}
                             {% if data.product_smartphone %}
-                                <h6 style="padding-top: 10px; margin-left: 20px;"><i class="fa-solid fa-store" style="color: rgb(112,52,87);"></i> <a href="{% url 'seller_store' data.product_smartphone.owner.store_name %}" style="text-decoration: none; color: rgb(112,52,87);;">{{ data.product_smartphone.owner }}</a></h6>
+                                <h6><i class="fa-solid fa-store"></i> <a href="{% url 'seller_store' data.product_smartphone.owner.store_name %}">{{ data.product_smartphone.owner }}</a></h6>
                             {% endif %}
                             {% if data.product_food %}
-                                <h6 style="padding-top: 10px; margin-left: 20px;"><i class="fa-solid fa-store" style="color: rgb(112,52,87);"></i> <a href="{% url 'seller_store' data.product_food.food_owner.store_name %}" style="text-decoration: none; color: rgb(112,52,87);;">{{ data.product_food.food_owner }}</a> </h6>
+                                <h6><i class="fa-solid fa-store"></i> <a href="{% url 'seller_store' data.product_food.food_owner.store_name %}">{{ data.product_food.food_owner }}</a></h6>
                             {% endif %}
-                            <div class="cart-lists" style="display: flex; margin-bottom: 20px; margin-left: 20px; width: 1100px; background-color: rgb(241, 229, 229);">
+                            <div class="cart-lists">
                                 {% if data.product_smartphone %}
-                                    <div class="product-smartphone" style="margin-right: 70px; display: flex; align-items: flex-start; width: 299px; height: 80px; margin-top: 15px;">
-                                        <img src="{{ data.product_smartphone.image.url }}" style="width: 70px; height: 60px; margin-right: 5px; margin-top: 10px;">
-                                        <p style="margin-top: 10px;"><a href="{% url 'smartphone_show' data.product_smartphone.pk %}" style="text-decoration: none; color: black;">{{ data.product_smartphone|truncatechars:65 }}</a></p>
+                                    <div class="product-smartphone">
+                                        <img src="{{ data.product_smartphone.image.url }}">
+                                        <p><a href="{% url 'smartphone_show' data.product_smartphone.pk %}">{{ data.product_smartphone|truncatechars:65 }}</a></p>
                                     </div>
                                 {% endif %}
                                 {% if data.product_food %}
-                                    <div class="product-food" style="margin-right: 70px; display: flex; align-items: flex-start; width: 299px; height: 80px; margin-top: 15px;">
-                                        <img src="{{ data.product_food.food_image.url }}" style="width: 70px; height: 60px; margin-right: 5px; margin-top: 10px;">
-                                        <p style="margin-top: 10px;"><a href="{% url 'food_show' data.product_food.pk %}" style="text-decoration: none; color: black;">{{ data.product_food|truncatechars:65 }}</a></p>
+                                    <div class="product-food">
+                                        <img src="{{ data.product_food.food_image.url }}">
+                                        <p><a href="{% url 'food_show' data.product_food.pk %}">{{ data.product_food|truncatechars:65 }}</a></p>
                                     </div>
                                 {% endif %}
-                                <div class="product-price" data-id="{{ data.id }}" style="margin-right: 60px; margin-top: 35px; width: 150px; background-color: white;">
+                                <div class="product-price" data-id="{{ data.id }}">
                                     Rp.{{ data.formatted_price }}
                                 </div>
-                                <div class="product-quantity" style="margin-right: 120px; margin-top: 35px;">
-                                    <span style="width: 30px; color: black; font-weight: 250;">{{ data.quantity }}</span>
+                                <div class="product-quantity">
+                                    <span>{{ data.quantity }}</span>
                                 </div>
                                 <!-- Input hidden to store the updated quantity value -->
                                 <input type="hidden" name="selected_products" value="{{ data.id }}">
                                 <input type="hidden" name="quantity{{ data.id }}" id="quantity_input_{{ data.id }}" value="{{ data.quantity }}">
                                 <!--  -->
-                                <div class="total_price" id="totalPrice{{ data.id }}" style="margin-top: 35px; margin-right: 55px; width: 150px; background-color: white;">
-                                    <p style="font-weight: 500;">Rp.{{ data.formatted_price }}</p>
+                                <div class="total_price" id="totalPrice{{ data.id }}">
+                                    <p>Rp.{{ data.formatted_price }}</p>
                                 </div>
-                                <div class="product-action" style="margin-top: 30px;">
+                                <div class="product-action">
                                     <form action="{% url 'delete_cart_item' data.id %}" method="post">
                                         {% csrf_token %}
                                         <button type="submit" class="btn btn-outline-danger">Delete</button>
@@ -77,14 +79,14 @@
                             <form action="{% url 'cart_shop' %}" method="post">
                                 {% csrf_token %}
                                 
-                                <div class="choose" style="transform: translateY(-85px); margin-left: 2px;">
+                                <div class="choose">
                                     <input type="checkbox" name="selected_products" value="{{ data.id }}">
                                     <input type="hidden" name="quantity{{ data.id }}" id="quantity_input_{{ data.id }}" value="{{ data.quantity }}">
                                 </div>
 
                                 <!-- Input hidden to store the updated quantity value -->
-                                <div class="checkout-btn" id="checkout-button" style="text-align: center;">
-                                    <button type="submit" name="checkout" class="btn" style="width: 180px; height: 40px; border-radius: 20px; color: white; background-color: rgb(112,52,87); font-weight: 600;">Checkout</button>
+                                <div class="checkout-btn" id="checkout-button">
+                                    <button type="submit" name="checkout" class="btn">Checkout</button>
                                 </div>
                             </form><hr>
                         {% endfor %}
