--- a/stores/templates/stores/store_profile.html
+++ b/stores/templates/stores/store_profile.html
@@ -1,28 +1,31 @@
 {% extends 'basic.html' %}
+{% load static %}
 
 {% block content %}
+    <link rel="stylesheet" href="{% static 'css/store-profile-style.css' %}">
+
     <div class="container">
         <div class="card">
-            <div class="seller-shop" style="display: flex; align-items: flex-start; margin-top: 10px; margin-left: 40px;">
-                <img src="{{ store_profile.image.url }}" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px;">
-                <div>
-                    <h5 style="margin-top: 10px;">{{ store_profile.store_name }}</h5>
+            <div class="seller-shop">
+                <img src="{{ store_profile.image.url }}">
+                <div class="store-profile">
+                    <h5>{{ store_profile.store_name }}</h5>
                 </div>
-            </div><hr><br>
+            </div><hr>
         </div>
-    </div><br><br>
+    </div>
     <div class="container">
         <div class="container-product">
             <div class="flex-container">
                 {% for gadget in smartphone %}
                     <div class="item smartphone-product">
-                        <img src="{{ gadget.image.url }}" style="width: 201px; height: 170px;">
-                        <div class="product-title" style="height: 90px; width: 195px;">
-                            <h6> <a href="{% url 'smartphone_show' gadget.id %}" style="text-decoration: none; color: black;"> {{ gadget.name|truncatechars:45 }} </a> </h6>
+                        <img src="{{ gadget.image.url }}">
+                        <div class="product-title">
+                            <h6><a href="{% url 'smartphone_show' gadget.id %}"> {{ gadget.name|truncatechars:45 }} </a></h6>
                         </div>
-                        <h5 style="color: rgba(0, 136, 226, 0.932); padding-left: 14px;"> Rp.{{ gadget.formatted_price }} </h5>
-                        <div class="seller" style="display: flex; margin-left: 10px; margin-bottom: 20px;">
-                            <img src="{{ gadget.owner.image.url }}" style="width: 20px; height: 20px; margin-right: 5px;">
+                        <h5> Rp.{{ gadget.formatted_price }} </h5>
+                        <div class="seller">
+                            <img src="{{ gadget.owner.image.url }}">
                             <h6> {{ gadget.owner.store_name }} </h6>
                         </div>
                         <br>
@@ -31,13 +34,13 @@
                 {% endfor %}
                 {% for makanan in food %}
                     <div class="item food-product">
-                        <img src="{{ makanan.food_image.url }}" style="width: 201px; height: 170px;">
-                        <div class="product-title" style="height: 90px; width: 195px;">
-                            <h6> <a href="{% url 'food_show' makanan.id %}" style="text-decoration: none; color: black;"> {{ makanan.food_name|truncatechars:45 }} </a> </h6>
+                        <img src="{{ makanan.food_image.url }}">
+                        <div class="product-title">
+                            <h6> <a href="{% url 'food_show' makanan.id %}"> {{ makanan.food_name|truncatechars:45 }} </a> </h6>
                         </div>
-                        <h5 style="color: rgba(0, 136, 226, 0.932); padding-left: 14px;"> Rp.{{ makanan.formatted_price }} </h5>
-                        <div class="seller" style="display: flex; margin-left: 10px; margin-bottom: 20px;">
-                            <img src="{{ makanan.food_owner.image.url }}" style="width: 20px; height: 20px; margin-right: 5px;">
+                        <h5> Rp.{{ makanan.formatted_price }} </h5>
+                        <div class="seller">
+                            <img src="{{ makanan.food_owner.image.url }}">
                             <h6> {{ makanan.food_owner.store_name }} </h6>
                         </div>
                         <br>
@@ -49,39 +52,4 @@
     </div>
 
 
-    <style>
-        .container {
-            margin-left: 0px;
-            display: flex;
-            justify-content: flex-start;
-            flex-wrap: wrap;
-        }
-
-        .card {
-            margin-left: -10px;
-            margin-right: -90px;
-            height: 220px;
-            width: 1780px;
-            margin-top: 10px;
-        }
-
-        .container-product {
-            display: flex;
-            justify-content: flex-start;
-            flex-wrap: wrap;
-        }
-
-        .flex-container {
-            display: flex;
-            flex-wrap: wrap;
-            width: 1150px;
-        }
-
-        .item {
-            width: calc(20% - 20px);
-            margin: 10px;
-            padding: 0px;
-            border: 1px solid #ccc;
-        }
-    </style>
 {% endblock %}
