--- a/stores/templates/stores/customerProfile.html
+++ b/stores/templates/stores/customerProfile.html
@@ -1,114 +1,117 @@
 {% extends 'basic.html' %}
+{% load static %}
 
 {% block content %}
+    <link rel="stylesheet" href="{% static 'css/customer-profile-style.css' %}">
+
     <div class="whole-body">
         <div class="container">
             <div class="card">
-                <div class="title-profile" style="margin-left: 30px; margin-top: 10px;">
+                <div class="title-profile">
                     <h3>Profile</h3>
                     <p>Manage your profile to secure the secirity of your account</p>
                 </div><hr>
-                <form action="" method="POST" enctype="multipart/form-data" style="width: 690px; height: 920px; margin-left: 30px; margin-top: 5px;">
+                <form action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
 
-                    <div class="profile-id" style="display: flex; align-items: flex-start; width: 1050px;">                    
-                        <div class="info-details" style="width: 1150px;">
-                            <div class="profile-information1" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
-                                <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1; width: 140px;">First Name:</label>
-                                <div class="form1" style="width: 380px; margin-left: 20px;">
+                    <div class="profile-id">
+                        <div class="info-details">
+                            <div class="profile-information1">
+                                <label for="id_first_name">First Name:</label>
+                                <div class="form1">
                                     {{ form.first_name }}
                                 </div>
                             </div>
-                            <div class="profile-information2" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
-                                <label for="id_last_name" style="padding-bottom: 40px; flex-grow: 1; width: 140px;">Last Name:</label>
-                                <div class="form2" style="width: 380px; margin-left: 20px;">
+                            <div class="profile-information2"> 
+                                <label for="id_last_name">Last Name:</label>
+                                <div class="form2">
                                     {{ form.last_name }}
                                 </div>
                             </div>
-                            <div class="profile-information3" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
-                                <label for="id_email" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Email:</label>
-                                <div class="form3" style="width: 380px; margin-left: 20px;">
+                            <div class="profile-information3">
+                                <label for="id_email">Email:</label>
+                                <div class="form3">
                                     {{ form.email }}
                                 </div>
                             </div>
-                            <div class="profile-information4" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
-                                <label for="id_birthdate" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Birthdate:</label>
-                                <div class="form4" style="width: 380px; margin-left: 20px;">
+                            <div class="profile-information4">
+                                <label for="id_birthdate">Birthdate:</label>
+                                <div class="form4">
                                     {{ form.birthdate }}
                                 </div>
                             </div>
-                            <div class="profile-information5" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
-                                <label for="id_phone_number" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Phone Number:</label>
-                                <div class="form5" style="width: 380px; margin-left: 20px;">
+                            <div class="profile-information5">
+                                <label for="id_phone_number">Phone Number:</label>
+                                <div class="form5">
                                     {{ form.phone_number }}
                                 </div>
                             </div>
-                            <div class="profile-information6" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
-                                <label for="id_country" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Country:</label>
-                                <div class="form6" style="width: 380px; margin-left: 20px;">
+                            <div class="profile-information6">        
+                                <label for="id_country">Country:</label>
+                                <div class="form6">
                                     {{ form.country }}
                                 </div>
                             </div>
-                            <div class="profile-information7" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
+                            <div class="profile-information7">        
                                 <label for="id_province" style="flex-grow: 1; padding-bottom: 40px">Province:</label>
-                                <div class="form7" style="width: 380px; margin-left: 20px;">
+                                <div class="form7">
                                     {{ form.province }}
                                 </div>
                             </div>
-                            <div class="profile-information8" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
-                                <label for="id_city" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">City:</label>
-                                <div class="form8" style="width: 380px; margin-left: 20px;">
+                            <div class="profile-information8">        
+                                <label for="id_city">City:</label>
+                                <div class="form8">
                                     {{ form.city }}
                                 </div>
                             </div>
-                            <div class="profile-information9" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
-                                <label for="id_district" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">District:</label>
-                                <div class="form9" style="width: 380px; margin-left: 20px;">
+                            <div class="profile-information9">        
+                                <label for="id_district">District:</label>
+                                <div class="form9">
                                     {{ form.district }}
                                 </div>
                             </div>
-                            <div class="profile-information10" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
-                                <label for="id_postal_code" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Postal Code:</label>
-                                <div class="form10" style="width: 380px; margin-left: 20px;">
+                            <div class="profile-information10">        
+                                <label for="id_postal_code">Postal Code:</label>
+                                <div class="form10">
                                     {{ form.postal_code }}
                                 </div>
                             </div>
-                            <div class="profile-information11" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
-                                <label for="id_street" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Street Name:</label>
-                                <div class="form11" style="width: 380px; margin-left: 20px;">
+                            <div class="profile-information11">        
+                                <label for="id_street">Street Name:</label>
+                                <div class="form11">
                                     {{ form.street }}
                                 </div>
                             </div>
-                            <div class="profile-information12" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px; width: 380px;">
-                                <label for="id_gender" style="margin-right: 90px; padding-bottom: 40px; flex-grow: 1;">Gender:</label>
-                                <div class="form12" style="width: 430px; margin-left: 20px;">
+                            <div class="profile-information12">
+                                <label for="id_gender">Gender:</label>
+                                <div class="form12">
                                     {{ form.gender }}
                                 </div>
                             </div>
                         </div><br>
-                        <div class="picture-profile-section" style="margin-left: 180px; width: 290px;">
-                            <h4 style="margin-top: 5px; margin-bottom: 20px; width: 290px; text-decoration: underline;">Change Profile Picture</h4>
+                        <div class="picture-profile-section">
+                            <h4>Change Profile Picture</h4>
                             {% if form.instance.image %}
                                 <div class="profile-image-container">
                                     <img src="{{ form.instance.image.url }}" class="size-profile-picture">
                                     <div class="image-overlay">
                                         <label for="file-upload" class="view-image">Change Picture</label>
-                                        <input type="file" id="file-upload" name="image" style="display: none;" accept="image/*">
+                                        <input type="file" id="file-upload" name="image" accept="image/*">
                                     </div>
                                 </div>
                             {% endif %}<br><br><hr><br>
-                            <div class="button-profile" style="display: flex; align-items: flex-start; width: 320px;">
-                                <div class="seller-login" style="margin-left: 20px;">
-                                    <a href="{% url 'logout_user' %}" class="btn btn-danger" style="color: white;">Logout</a>
+                            <div class="button-profile">
+                                <div class="customer-logout">
+                                    <a href="{% url 'logout_user' %}" class="btn btn-danger">Logout</a>
                                 </div>
-                                <div class="seller-login" style="margin-left: 30px;">
+                                <div class="seller-login">
                                     <a href="{% url 'add_seller_profile' %}" class="btn btn-primary">Login as Seller</a>
                                 </div>
                             </div>
                         </div>
                     </div><br>
-                    <div>
-                        <div class="button-position" style="margin-left: 280px;">
+                    <div class="button-save">
+                        <div class="button-position">
                             <a href="{% url 'customerProfile' %}"><input type="submit" value="Save" class="btn btn-success"></a>
                         </div>
                     </div>
@@ -117,74 +120,5 @@
         </div>
     </div>
 
-    <style>
-        .whole-body {
-            /* background-color: rgba(14, 12, 12, 0.959); */
-            margin-top: 0px;
-        }
-
-        .profile-image-container {
-            position: relative;
-            display: inline-block;
-            margin-left: 40px;
-        }
-
-        .size-profile-picture {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-        }
-
-        .image-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            border-radius: 50%;
-        }
-
-        .profile-image-container:hover .image-overlay {
-            opacity: 1;
-        }
-
-        .view-image {
-            color: white;
-            cursor: pointer;
-        }
-        
-        .birthdate-select {
-            width: 110px;
-            height: 40px;
-            margin-right: 9px;
-            text-align: center;
-        }
-
-        .birthdate-select:hover {
-            border-color:  orange;
-        }
-    </style>
-
-    <script>
-        // Change profile picture
-        document.addEventListener("DOMContentLoaded", function() {
-            document.getElementById('file-upload').addEventListener('change', function() {
-                let file = this.files[0]
-                if (file) {
-                    let reader = new FileReader()
-                    reader.onload = function(e) {
-                        document.querySelector('.size-profile-picture').src = e.target.result
-                    }
-                    reader.readAsDataURL(file)
-                }
-            })
-        })
-    </script>
+    <script src="{% static 'js/customer-profile-function.js' %}"></script>
 {% endblock %}
